# aws-ecommerce-aidlc

./: .gitignore  README.md  docker-compose.prod.yml
admin-api/: Dockerfile  pyproject.toml
admin-api/src/app/: config.py  database.py  main.py
admin-api/src/app/models/: __init__.py  category.py  inventory.py  product.py  product_audit_log.py  product_image.py  stock_audit_log.py
admin-api/src/app/routers/: categories.py  images.py  inventory.py  products.py
admin-api/src/app/schemas/: category.py  image.py  inventory.py  product.py
admin-api/src/app/services/: image_service.py  inventory_service.py  product_service.py
admin-api/tests/: conftest.py  test_categories.py  test_inventory.py  test_products.py
admin-ui/: index.html  package.json  vite.config.ts
admin-ui/src/: App.tsx
aidlc-docs/: prompts.md
aidlc-docs/design-artifacts/: domain_model.md
aidlc-docs/plans/: deployment_plan.md  domain_model_plan.md  unit_implementation_tracker.md  units_plan.md  user_stories_plan.md
auth-api/: Dockerfile  pyproject.toml
auth-api/tests/: conftest.py  (+1 more)
cart-api/: Dockerfile  pyproject.toml
catalog-api/: Dockerfile  pyproject.toml
catalog-api/src/app/: config.py  helpers.py  main.py
catalog-api/src/app/models/: __init__.py  category.py  inventory.py  product.py  product_image.py
catalog-api/src/app/routers/: catalog.py
catalog-api/src/app/schemas/: catalog.py
catalog-api/tests/: conftest.py  test_catalog.py
catalog-ui/: package.json  vite.config.ts
infra/: app.py  cdk.context.json
nginx/: nginx.conf
orders-api/: Dockerfile  pyproject.toml
(+77 files in other folders)
